--- a/intro.html
+++ b/intro.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+    </style>
+    <link rel="stylesheet" href="intro.css">
     <title>Fitness Pals</title>
 </head>
 <body>
-    
+    <div class="info-container">
+        <h1 class="intro-header">Fitness Pals</h1>
+        <p class="word-container">FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU</p>
+        <button href="welcome.html">Continue</button>
+    </div>
 </body>
 </html>
