--- a/workout.html
+++ b/workout.html
@@ -13,14 +13,32 @@
 			<img src="./Picture/More.png" alt="More" />
 		</div>
 		<div class="Today">Today</div>
-		<div class="Box">
+		<!-- <div class="Box">
 			<div class="Box2">
 				<div class="Day">Jul 09, wed.</div>
 				<div class="Time">Day 1</div>
 				<div class="Day">5 mins | 76 kcal</div>
 			</div>
 			<img class="img" src="./Picture/image 45.png" alt="" />
-			<div class="Box3">Start</div>
+			<div class="Box3">Start</div> -->
+			<div>
+			<div class="Top">
+				<div class="Box2">
+				<div class="Day">Jul 09, wed.</div>
+				<div class="Time">Day 1</div>
+				<div class="Day">5 mins | 76 kcal</div>
+			</div>
+		     	<div class="Box3">
+					<div class="posetion">
+					<img  src="./Picture/image 45.png"  alt="image">
+					</div>
+				</div>
+			</div>
+			<div class="bottom">
+				<p class="Button"> <input type="button" value="Button" /></p>
+
+			</div>
+			</div>
 		</div>
 	</body>
 </html>
