--- a/home.html
+++ b/home.html
@@ -38,17 +38,17 @@
 <div class="Routine">
 
     <div class="data">
-<p>Daily Routine</p>
-<p>Body Weight</p>
-<p>Workout 1 of 5</p>
+<p id="daily">Daily Routine</p>
+<p id="weight">Body Weight</p>
+<p id="workout">Workout 1 of 5</p>
 </div>
 
 <div class="exercise">
     <img src="forward.png" id="forward">
 
     <div class="under">
-    <p>Next exercise</p>
-    <p>Lower Strength</p>
+    <p id="next">Next exercise</p>
+    <p id="lower">Lower Strength</p>
 </div>
 </div>
 
@@ -69,7 +69,14 @@
     <img src="item.png">
 </div>
 
-    <p>See All</p>
+<div class="time">
+    <p>July 4</p>
+    <p>July 4</p>
+    <p>July 4</p>
+    <p>July 4</p>
+</div>
+
+    <p id="viewall">See All</p>
 </div>
 
 
@@ -81,10 +88,10 @@
 </body>
 
 
-<footer>
-    <img src="setting.png">
+<footer class="bottom">
+    <img src="">
     <img src="home.png">
-    <img src="health.png">
+    <img src="">
 </footer>
 
 
