--- a/form.html
+++ b/form.html
@@ -32,14 +32,15 @@ body {
 .intro-header {
   font-size: 48px;
   color: white;
-  font-weight: bold;
-  font-family: "DM Sans", sans-serif;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
   margin: 0;
 }
 
 .word-container {
   font-size: 12px;
   font-family: "Poppins", sans-serif;
+  font-weight: 600;
   padding-left: 40px;
   padding-right: 40px;
   color: white;
@@ -48,7 +49,7 @@ body {
 
 button {
   padding: 20px 110px;
-  font-size: 17px;
+  font-size: 16px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   border: none;
@@ -63,14 +64,15 @@ button:hover {
   background-color: #f5f5f5;
 }
     </style>
-    <link rel="stylesheet" href="intro.css">
     <title>Fitness Pals</title>
 </head>
 <body>
     <div class="info-container">
-        <h1 class="intro-header">Fitness Pals</h1>
-        <p class="word-container">FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU</p>
-        <a href="form.html"><button>Continue</button></a>
+        <h1 class="intro-header">Welcome</h1>
+        <p class="word-container">Sign in or create a account
+ to continue access.</p>
+        <a href="log-in-page.html"><button>Log in</button></a>
+       <a href="sign-up-page.html"><button>Sign up</button></a>
     </div>
 </body>
 </html>
