--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -36,41 +36,11 @@ body {
   font-family: "DM Sans", sans-serif;
   margin: 0;
 }
-
-.word-container {
-  font-size: 12px;
-  font-family: "Poppins", sans-serif;
-  padding-left: 40px;
-  padding-right: 40px;
-  color: white;
-  margin: 0;
-}
-
-button {
-  padding: 20px 110px;
-  font-size: 17px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  border: none;
-  border-radius: 16px;
-  background-color: white;
-  color: #000000;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-button:hover {
-  background-color: #f5f5f5;
-}
-    </style>
-    <link rel="stylesheet" href="intro.css">
-    <title>Fitness Pals</title>
-</head>
+</style>
 <body>
     <div class="info-container">
-        <h1 class="intro-header">Fitness Pals</h1>
-        <p class="word-container">FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU</p>
-        <a href="form.html"><button>Continue</button></a>
+        <h1 class="intro-header">Thank You</h1>
+       
     </div>
 </body>
 </html>
