--- a/home.html
+++ b/home.html
@@ -89,7 +89,8 @@
 
 
 <footer class="bottom">
-    <img src="">
+ <a href="setting.html"><img src="https://cdn-icons-png.flaticon.com/512/126/126472.png" height="20px"></a>
+    
     <img src="home.png">
     <img src="">
 </footer>
