--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -39,7 +39,8 @@ body {
 </style>
 <body>
     <div class="info-container">
-        <h1 class="intro-header">Thank You</h1>
+      <a href="home.html">
+        <h1 class="intro-header">Thank You</h1></a>
        
     </div>
 </body>
