--- a/setting.html
+++ b/setting.html
@@ -131,7 +131,7 @@
 
   <section class="header">
     <div class="container">
-      <a href="TEST-DROPDOWN.html"><img class="header-image" src="Arrow.png" alt=""></a>
+      <a href="home.html"><img class="header-image" src="Arrow.png" alt=""></a>
       
       <p class="setting">Settings</p>
     </div>
