added setting icon to home

--- a/home.html
+++ b/home.html
@@ -89,8 +89,7 @@
 
 
 <footer class="bottom">
- <a href="setting.html"><img src="https://cdn-icons-png.flaticon.com/512/126/126472.png" height="20px"></a>
-    
+ <a href="setting.html" id="setting-icon"><img src="https://cdn-icons-png.flaticon.com/512/126/126472.png" height="20px"></a>
     <img src="home.png">
     <img src="">
 </footer>
