--- a/home.html
+++ b/home.html
@@ -53,8 +53,12 @@
 </div>
 
 <div class="newPlan">
-    <p id="New">Create New Plan</p> 
-    <img src="add.png">
+    <button class="add" id="New" onclick="toggleNewPlan()">Create New Plan</button> 
+    <img class="add" src="add.png">
+    <div class="dropdown hidden" id="addlam"> 
+    
+    </div>
+
 </div>
 </div>
 
