--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
     <div class="dropdown hidden" id="addlam"> 
     
     </div>
-
+    <script src="../js/newPlan.js"></script>
 </div>
 </div>
 
@@ -79,8 +79,9 @@
     <p>July 4</p>
     <p>July 4</p>
 </div>
-
-    <p id="viewall">See All</p>
+<div class="wasd" id="viewall">
+    <button id="All">See All</button>
+</div>
 </div>
 
 
