--- a/index.html
+++ b/index.html
@@ -1,103 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>home page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fitness Pals</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
+
+  <link rel="stylesheet" href="intro.css" />
+
+  <style>
+    * {
+      margin: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      background-color: #F15223;
+      text-align: center;
+      font-family: "DM Sans", sans-serif;
+    }
+
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      align-items: center;
+      max-width: 600px;
+      padding: 24px;
+    }
+
+    .intro-header {
+      font-size: 48px;
+      color: white;
+      font-weight: bold;
+    }
+
+    .word-container {
+      font-size: 14px;
+      font-family: "Poppins", sans-serif;
+      padding: 0 40px;
+      color: white;
+    }
+
+    button {
+      padding: 20px 110px;
+      font-size: 17px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 600;
+      border: none;
+      border-radius: 16px;
+      background-color: white;
+      color: #000000;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #f5f5f5;
+    }
+  </style>
 </head>
-
-<div>
-<img src="side.png" class="corner">
-</div>
-
-
-
 <body>
 
-
-    <div class="date">Today, July, 17</div>
-    <div class="timer">
-        <input type="text" id="minutesInput" placeholder="Minutes" />
-        <button id="startBtn">Start Timer</button>
-      </div>
-      
-      <script src="../js/timer.js"></script>
-
-<div class="username">Hi, guest</div>
-
-
-
-
-<h1 class="pal">My Plan</h1>
-
-<div class="Plans">
-<img src="icon.png" id="energy">
-
-<div class="Routine">
-
-    <div class="data">
-<p id="daily">Daily Routine</p>
-<p id="weight">Body Weight</p>
-<p id="workout">Workout 1 of 5</p>
-</div>
-
-<div class="exercise">
-    <img src="forward.png" id="forward">
-
-    <div class="under">
-    <p id="next">Next exercise</p>
-    <p id="lower">Lower Strength</p>
-</div>
-</div>
-
-<div class="newPlan">
-    <button class="add" id="New" onclick="toggleNewPlan()">Create New Plan</button> 
-    <img class="add" src="add.png">
-    <div class="dropdown hidden" id="addlam"> 
-    
-    </div>
-    <script src="../js/newPlan.js"></script>
-</div>
-</div>
-
-
-<div class="recentPlan">
-    <p id="Recent">Recent Plan</p>
-
-    <div class="dayy">
-    <img src="item.png">
-    <img src="item.png">
-    <img src="item.png">
-    <img src="item.png">
-</div>
-
-<div class="time">
-    <p>July 4</p>
-    <p>July 4</p>
-    <p>July 4</p>
-    <p>July 4</p>
-</div>
-<div class="wasd" id="viewall">
-    <button id="All">See All</button>
-</div>
-</div>
-
-
-
-</div>
-
-
+  <div class="info-container">
+    <h1 class="intro-header">Fitness Pals</h1>
+    <p class="word-container">
+      FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
+    </p>
+    <a href="form.html">
+      <button>Continue</button>
+    </a>
+  </div>
 
 </body>
-
-
-<footer class="bottom">
- <a href="setting.html" id="setting-icon"><img src="https://cdn-icons-png.flaticon.com/512/126/126472.png" height="20px"></a>
-    <img src="home.png">
-    <img src="">
-</footer>
-
-
 </html>
