--- a/TEST-DROPDOWN.html
+++ b/TEST-DROPDOWN.html
@@ -270,7 +270,7 @@ input:checked + .slider:before {
     <!--HEADER -->
      <section class="header">
     <div class="container">
-      <a href="setting.html"><img class="header-image" src="Arrow.png" alt=""></a>
+      <a href="home.html"><img class="header-image" src="Arrow.png" alt=""></a>
       
       <p class="setting">Settings</p>
     </div>
