--- a/log-in-page.html
+++ b/log-in-page.html
@@ -135,7 +135,7 @@
         
            
         </form>
-         <a href="thank-you-page.html"><button class="final-button">Log in</button></a>
+         <a href="home.html"><button class="final-button">Log in</button></a>
     </section>
    
 </body>
