--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>FitnessPal</title>
-    <link rel="shortcut icon" href="Group 18316.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./pictures/Group 18316.png 18316.png" type="image/x-icon">
 
 </head>
 
 <div>
-<img src="side.png" class="corner">
+<img src="./pictures/side.png" class="corner">
 </div>
 
 
@@ -34,7 +34,7 @@
 <h1 class="pal">My Plan</h1>
 
 <div class="Plans">
-<img src="icon.png" id="energy">
+<img src="./pictures/Icon.png" id="energy">
 
 <div class="Routine">
 
@@ -45,7 +45,7 @@
 </div>
 
 <div class="exercise">
-    <img src="forward.png" id="forward">
+    <img src="./pictures/forward.png" id="forward">
 
     <div class="under">
     <p id="next">Next exercise</p>
@@ -55,7 +55,7 @@
 
 <div class="newPlan">
     <button class="add" id="New" onclick="toggleNewPlan()">Create New Plan</button> 
-    <img class="add" src="add.png">
+    <img class="add" src="./pictures/add.png">
     <div class="dropdown hidden" id="addlam"> 
     
     </div>
@@ -68,10 +68,10 @@
     <p id="Recent">Recent Plan</p>
 
     <div class="dayy">
-    <img src="item.png">
-    <img src="item.png">
-    <img src="item.png">
-    <img src="item.png">
+    <img src="/pictures/Item.png">
+    <img src="/pictures/Item.png">
+    <img src="/pictures/Item.png">
+    <img src="/pictures/Item.png">
 </div>
 
 <div class="time">
