--- a/html/home.html
+++ b/html/home.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>FitnessPal</title>
-    <link rel="shortcut icon" href="./pictures/Group 18316.png 18316.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/Group 18316.png 18316.png" type="image/x-icon">
 
 </head>
 
 <div>
-<img src="./pictures/side.png" class="corner">
+<img src="../assets/side.png" class="corner">
 </div>
 
 
@@ -36,7 +35,7 @@
 <h1 class="pal">My Plan</h1>
 
 <div class="Plans">
-<img src="./pictures/Icon.png" id="energy">
+<img src="../assets/Icon.png" id="energy">
 
 <div class="Routine">
 
@@ -47,7 +46,7 @@
 </div>
 
 <div class="exercise">
-    <img src="./pictures/forward.png" id="forward">
+    <img src="../assets/forward.png" id="forward">
 
     <div class="under">
     <p id="next">Next exercise</p>
@@ -57,11 +56,11 @@
 
 <div class="newPlan">
     <button class="add" id="New" onclick="toggleNewPlan()">Create New Plan</button> 
-    <img class="add" src="./pictures/add.png">
+    <img class="add" src="../assets/add.png">
     <div class="dropdown hidden" id="addlam"> 
     
     </div>
-    <script src="../js/newPlan.js"></script>
+    <script src="./js/newPlan.js"></script>
 </div>
 </div>
 
@@ -70,10 +69,10 @@
     <p id="Recent">Recent Plan</p>
 
     <div class="dayy">
-    <img src="/pictures/Item.png">
-    <img src="/pictures/Item.png">
-    <img src="/pictures/Item.png">
-    <img src="/pictures/Item.png">
+    <img src="../assets/Item.png">
+    <img src="../assets/Item.png">
+    <img src="../assets/Item.png">
+    <img src="../assets/Item.png">
 </div>
 
 <div class="time">
