--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fitness Pals</title>
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <title>FitnessPals</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-
-
-  <link rel="stylesheet" href="intro.css" />
 
   <style>
     * {
@@ -74,7 +72,7 @@
     <p class="word-container">
       FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
     </p>
-    <a href="form.html">
+    <a href="html/form.html">
       <button>Continue</button>
     </a>
   </div>
