--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -270,7 +270,7 @@ input:checked + .slider:before {
     <!--HEADER -->
      <section class="header">
     <div class="container">
-      <a href="home.html"><img class="header-image" src="Arrow.png" alt=""></a>
+      <a href="/html/home.html"><img class="header-image" src="/assets/Arrow.png" alt=""></a>
       
       <p class="setting">Settings</p>
     </div>
@@ -286,7 +286,7 @@ input:checked + .slider:before {
         <img src="https://cdn-icons-png.flaticon.com/128/9308/9308008.png" alt="" class="pfp-image" height="20px" width="20px">
         <p class="para-title">Account</p>
       </div>
-      <img class="arrow-icon" src="Arrow-dropdown.png" alt="Dropdown Arrow" />
+      <img class="arrow-icon" src="/assets/Arrow-dropdown.png" alt="Dropdown Arrow" />
     </div>
 
     <div class="dropdown-content">
@@ -309,7 +309,7 @@ input:checked + .slider:before {
         <img src="https://cdn-icons-png.flaticon.com/128/4991/4991422.png" height="20px" class="pfp-image"/>
         <p class="para-title">Notification</p>
       </div>
-      <img class="arrow-icon" src="Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 207px;" />
+      <img class="arrow-icon" src="/assets/Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 207px;" />
     </div>
 
     <div class="dropdown-content">
@@ -359,7 +359,7 @@ input:checked + .slider:before {
         <img src="https://cdn-icons-png.flaticon.com/128/1828/1828427.png" height="20px" class="pfp-image"/>
         <p class="para-title">Logout</p>
       </div>
-      <img class="arrow-icon" src="Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 247px;" />
+      <img class="arrow-icon" src="/assets/Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 247px;" />
     </div>
    </div>
  
@@ -375,7 +375,7 @@ input:checked + .slider:before {
         <img src="https://cdn-icons-png.flaticon.com/128/1214/1214428.png" height="20px" class="pfp-image"/>
         <p class="para-title">Deactivate</p>
       </div>
-      <img class="arrow-icon" src="Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 167px;" />
+      <img class="arrow-icon" src="/assets/Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 167px;" />
     </div>
 
 
