--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -292,9 +292,9 @@ input:checked + .slider:before {
     <div class="dropdown-content">
        <p class="setting" style="margin-left: 0px; margin-top: 5px; font-size: 13px;">Account Setting</p>
       <div class="dropdown-item">
-       <img src="https://media.newyorker.com/photos/624f484bb8900d61c847f8d7/1:1/w_2269,h_2269,c_limit/Long-Butler-09.jpg" alt="" height="45px" width="45px">
+       <img src="https://cdn-icons-png.flaticon.com/128/847/847969.png" alt="" height="45px" width="45px">
       <div class="item-information">
-        <p class="name-text">Arnold Schwarzenegger</p>
+        <p class="name-text">Guest</p>
         <a href="edit-profile.html" style="text-decoration: none;"><p class="edit-pin">Edit Your Profile</p></a>
       </div>
       </div>
