--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -138,6 +138,21 @@
         </form>
          <a href="home.html"><button class="final-button">Log in</button></a>
     </section>
-   
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Login</title>
+</head>
+<body>
+  <h2>Login</h2>
+  <form onsubmit="handleLogin(event)">
+    <input type="text" id="username" placeholder="Username" required />
+    <button type="submit">Log In</button>
+  </form>
+<script src="/js/"></script>
+</body>
+</html>
+
 </body>
 </html>
