--- a/html/home.html
+++ b/html/home.html
@@ -27,7 +27,7 @@
       
       <script src="../js/timer.js"></script>
 
-<div class="username">Hi, guest</div>
+<div class="username">Hi, <span id="displayName"></span>! </div>
 
 
 
