--- a/html/welcome.html
+++ b/html/welcome.html
@@ -74,8 +74,8 @@ button:hover {
             <h1 class="intro-header">Welcome!</h1>
         <p class="word-container">Sign in or create a account to continue access.</p>
         </div>
-        <button href="/html/log-in-page.html" style="padding-left: 118px; padding-right: 118px;">Log in</button>
-        <button href="/html/sign-up-page.html">Sign up</button>
+        <a href="/html/log-in-page.html"><button style="padding-left: 118px; padding-right: 118px;">Log in</button></a>
+        <a href="/html/sign-up-page.html"><button>Sign up</button></a>
     </div>
 </body>
 </html>
