--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="word-container">
       FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
     </p>
-    <a href="html/form.html">
+    <a href="/html/welcome.html">
       <button>Continue</button>
     </a>
   </div>
