--- a/workout.html
+++ b/workout.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>FITNESS PALS</title>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body class="background">
@@ -27,16 +27,37 @@
 				</div>
 			</div>
 			<div class="bottom">
-				<div class="Button">Start Now</div>
+				<a href="./Workout1.html" class="Button">Start Now</a>
 			</div>
 		</div>
 		<div class="upcoming">upcoming</div>
 		<div class="Box4">
-			<div class="Box2">
-				<div class="Day">Jul 09, wed.</div>
-				<div class="Time">Day 1</div>
-				<div class="Day">5 mins | 76 kcal</div>
+			<div class="Top1">
+				<div class="Day1">Jul 14, Mon.</div>
+				<div class="Time2">Day 2</div>
+			</div>
+			<div class="Top2">
 				<img src="./Picture/image 48.png" alt="image" class="Posetion2" />
+			</div>
+		</div>
+		<div class="upcoming">Week 2</div>
+		<div class="Box4">
+			<div class="Top1">
+				<div class="Day1">Jul 16, Wed.</div>
+				<div class="Time2">Day 3</div>
+			</div>
+			<div class="Top2">
+				<img src="./Picture/image 49.png" alt="image" class="Posetion2" />
+			</div>
+		</div>
+		<div class="upcoming">Week 2</div>
+		<div class="Box4">
+			<div class="Top1">
+				<div class="Day1">Jul 18, Fri..</div>
+				<div class="Time2">Day 4</div>
+			</div>
+			<div class="Top2">
+				<img src="./Picture/image 50 (1).png" alt="image" class="Posetion2" />
 			</div>
 		</div>
 	</body>
