--- a/html/home.html
+++ b/html/home.html
@@ -27,9 +27,17 @@
       
       <script src="../js/timer.js"></script>
 
-<div class="username">Hi, <span id="displayName"></span>! </div>
+<div class="username" id="welcome-message">Hi, <span id="welcome-message"></span>! </div>
 
-<script ></script>
+<script >
+     const username = localStorage.getItem("loggedInUser");
+    if (username) {
+      document.getElementById("welcome-message").textContent = `Hi, ${username}!`;
+    } else {
+      // If no username found, go back to login
+      window.location.href = "login.html";
+    }
+  </script>
 
 
 <h1 class="pal">My Plan</h1>
