--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
 <body>
 
   <div class="info-container">
+    <div class="header-container">
     <h1 class="intro-header">Fitness Pals</h1>
     <p class="word-container">
       FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
-    </p>
+    </p>  
+    </div>
     <a href="/html/welcome.html">
       <button>Continue</button>
     </a>
