--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login</title>
+  <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <title>FitnessPals</title>
   <style>
     * {
       box-sizing: border-box;
