--- a/html/edit-profile.html
+++ b/html/edit-profile.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fitness Pals</title>
+   <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <title>FitnessPals</title>
   <style>
      @import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap');
 
