--- a/html/home.html
+++ b/html/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-
-    <title>FitnessPal</title>
+     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <title>FitnessPals</title>
     <link rel="shortcut icon" href="../assets/Group 18316.png 18316.png" type="image/x-icon">
 
 </head>
