--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -227,7 +227,7 @@
       <div class="dropdown-content">
         <p class="setting" style="margin-left: 0; margin-top: 5px; font-size: 13px;">Account Setting</p>
         <div class="dropdown-item">
-          <img src="https://cdn-icons-png.flaticon.com/128/9131/9131549.png" alt="Profile Icon" height="45px" width="45px">
+          <img src="https://cdn-icons-png.flaticon.com/128/847/847969.png" alt="Profile Icon" height="45px" width="45px">
           <div class="item-information">
             <p class="name-text" id="account-username">Guest</p>
             <a href="edit-profile.html" style="text-decoration: none;">
