--- a/html/home.html
+++ b/html/home.html
@@ -50,7 +50,7 @@
     <div class="data">
 <p id="daily">Daily Routine</p>
 <p id="weight">Body Weight</p>
-<p id="workout">Workout 1 of <span id="totalWorkouts">5</span></p>
+<p id="workout">Workout 0 of <span id="totalWorkouts">0</span></p>
 </div>
 
 <div class="exercise">
@@ -58,7 +58,7 @@
 
     <div class="under">
     <p id="next">Next exercise</p>
-    <p id="lower">Lower Strength</p>
+    <p id="lower">None</p>
 </div>
 </div>
 
