--- a/html/home.html
+++ b/html/home.html
@@ -119,7 +119,7 @@
 <footer class="bottom">
  <a href="TEST-DROPDOWN.html"><img style="height: 35px; margin-top: 35px;margin-right: 30px;"src="https://cdn-icons-png.flaticon.com/128/3019/3019014.png" alt=""></a>
 <a href="home.html"><img  style="height: 35px;  margin-top: 35px;"src="https://cdn-icons-png.flaticon.com/128/1946/1946436.png" alt=""></a>
-<a href=""><img style="height: 35px;  margin-top: 35px;margin-left: 30px;"src="https://cdn-icons-png.flaticon.com/128/3004/3004451.png" alt=""></a>
+<a href="workout.html"><img style="height: 35px;  margin-top: 35px;margin-left: 30px;"src="https://cdn-icons-png.flaticon.com/128/3004/3004451.png" alt=""></a>
 </footer>
 
 
