--- a/html/Workout1.html
+++ b/html/Workout1.html
@@ -6,5 +6,23 @@
 		<title>FITNESS PALS</title>
 		<link rel="stylesheet" href="../css/Workout1.css" />
 	</head>
-	<body></body>
+	<body class="Background">
+		<div class="Container">
+			<img src="../Picture/Arrow.png" alt="Arrow" />
+			<div class="Font">Day 1</div>
+		</div>
+		<div class="Container1">
+			<div class="Day">Day 1</div>
+			<div class="Day">5 min</div>
+			<div class="Day">76 Kcal</div>
+		</div>
+		<div class="Exercise">Exercise (5)</div>
+		<div class="Container3">
+			<img
+				src="../assets/Knee plank exercise_ Flat vector illustration… 1.png"
+				class="img"
+			/>
+			<div class="Exercise1">Knee plank 00.30</div>
+		</div>
+	</body>
 </html>
