--- a/html/Workout1.html
+++ b/html/Workout1.html
@@ -8,7 +8,7 @@
 	</head>
 	<body class="Background">
 		<div class="Container">
-			<img src="../Picture/Arrow.png" alt="Arrow" />
+			<img src="../assets/Arrow.png" alt="Arrow" />
 			<div class="Font">Day 1</div>
 		</div>
 		<div class="Container1">
