--- a/html/workout.html
+++ b/html/workout.html
@@ -8,7 +8,7 @@
 	</head>
 	<body class="background">
 		<div class="Container">
-			<img src="../Picture/Arrow.png" alt="Arrow" />
+			<img src="../assets/Arrow.png" alt="Arrow" />
 			<div class="Font">WorkOuts</div>
 		</div>
 		<div class="Today">Today</div>
@@ -22,7 +22,7 @@
 					</div>
 				</div>
 				<div class="Box3">
-					<img src="../Picture/image 45.png" alt="image" class="Posetion" />
+					<img src="../assets/image 45.png" alt="image" class="Posetion" />
 				</div>
 			</div>
 			<div class="bottom">
@@ -36,7 +36,7 @@
 				<div class="Time2">Day 2</div>
 			</div>
 			<div class="Top2">
-				<img src="../Picture/image 48.png" alt="image" class="Posetion2" />
+				<img src="../assets/image 48.png" alt="image" class="Posetion2" />
 			</div>
 		</div>
 		<div class="upcoming">Week 2</div>
@@ -46,7 +46,7 @@
 				<div class="Time2">Day 3</div>
 			</div>
 			<div class="Top2">
-				<img src="../Picture/image 49.png" alt="image" class="Posetion2" />
+				<img src="../assets/image 49.png" alt="image" class="Posetion2" />
 			</div>
 		</div>
 		<div class="upcoming">Week 2</div>
@@ -56,7 +56,7 @@
 				<div class="Time2">Day 4</div>
 			</div>
 			<div class="Top2">
-				<img src="../Picture/image 50 (1).png" alt="image" class="Posetion2" />
+				<img src="../assets/image 50 (1).png" alt="image" class="Posetion2" />
 			</div>
 		</div>
 	</body>
