--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -195,6 +195,50 @@
         transform: scaleY(1);
       }
     }
+    /* iPhone 13 Mini and older small iPhones */
+@media (width: 375px) {
+ body {
+      font-family: "Sen", sans-serif;
+    }
+
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+
+    .container {
+      gap: 10px;
+    }
+
+    .header {
+      background: #F15225;
+      height: 209px;
+      width: 100%;
+      max-width: 375px;
+    }
+
+}
+
+/* iPhone 12 / 13 / 14 / 15 / 16 (Regular & Pro) */
+@media (width: 390px) {
+ 
+}
+
+/* iPhone 14 Pro / iPhone 15 Pro / iPhone 16 Pro */
+@media (width: 393px) {
+ 
+}
+
+/* iPhone 12/13 Pro Max */
+@media (width: 428px) {
+ 
+}
+
+/* iPhone 14/15/16 Pro Max */
+@media (width: 430px) {
+
+}
+
     .logout-btn {
   margin-top: 10px;
   padding: 10px 20px;
