--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -229,22 +229,136 @@
 
 /* iPhone 12 / 13 / 14 / 15 / 16 (Regular & Pro) */
 @media (width: 390px) {
- 
+ body {
+      font-family: "Sen", sans-serif;
+    }
+
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+
+    .container {
+      gap: 10px;
+    }
+
+    .header {
+      background: #F15225;
+      height: 209px;
+      width: 100%;
+      max-width: 390px;
+    }
+.arrow-icon {
+      width: 24px;
+      height: 24px;
+      margin-left: 50px !important;
+      transition: transform 0.3s ease;
+    }
+    .dropdown-content {
+      padding-left: 33px !important;
+    }
 }
 
 /* iPhone 14 Pro / iPhone 15 Pro / iPhone 16 Pro */
 @media (width: 393px) {
- 
+  body {
+      font-family: "Sen", sans-serif;
+    }
+
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+
+    .container {
+      gap: 10px;
+    }
+
+    .header {
+      background: #F15225;
+      height: 209px;
+      width: 100%;
+      max-width: 390px;
+    }
+.arrow-icon {
+      width: 24px;
+      height: 24px;
+      margin-left: 50px !important;
+      transition: transform 0.3s ease;
+    }
+    .dropdown-content {
+      padding-left: 33px !important;
+    }
 }
 
 /* iPhone 12/13 Pro Max */
 @media (width: 428px) {
- 
+  body {
+      font-family: "Sen", sans-serif;
+    }
+
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+
+    .container {
+      gap: 10px;
+    }
+
+    .header {
+      background: #F15225;
+      height: 209px;
+      width: 100%;
+      max-width: 428px;
+    }
+.arrow-icon {
+      width: 24px;
+      height: 24px;
+      margin-left: 50px !important;
+      transition: transform 0.3s ease;
+    }
+    .dropdown-content {
+      padding-left: 66px !important;
+    }
+    .dropdown-header {
+      padding-left: 33px;
+    }
 }
 
 /* iPhone 14/15/16 Pro Max */
 @media (width: 430px) {
+ body {
+      font-family: "Sen", sans-serif;
+    }
 
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+
+    .container {
+      gap: 10px;
+    }
+
+    .header {
+      background: #F15225;
+      height: 209px;
+      width: 100%;
+      max-width: 430px;
+    }
+.arrow-icon {
+      width: 24px;
+      height: 24px;
+      margin-left: 50px !important;
+      transition: transform 0.3s ease;
+    }
+    .dropdown-content {
+      padding-left: 66px !important;
+    }
+    .dropdown-header {
+      padding-left: 33px;
+    }
 }
 
     .logout-btn {
