--- a/html/edit-profile.html
+++ b/html/edit-profile.html
@@ -109,6 +109,44 @@
     .btn-saved {
       text-align: center;
     }
+    @media (width: 375px) {
+ body {
+      font-family: "Sen", sans-serif;
+    }
+
+    hr {
+      margin: 23px 33px;
+      background-color: black;
+    }
+ .btn-saved {
+     margin-right: 25px;
+    }
+   
+}
+
+/* iPhone 12 / 13 / 14 / 15 / 16 (Regular & Pro) */
+@media (width: 390px) {
+  .btn-saved {
+     margin-right: 25px;
+    }
+}
+
+/* iPhone 14 Pro / iPhone 15 Pro / iPhone 16 Pro */
+@media (width: 393px) {
+ .btn-saved {
+     margin-right: 25px;
+    }
+}
+
+/* iPhone 12/13 Pro Max */
+@media (width: 428px) {
+ 
+}
+
+/* iPhone 14/15/16 Pro Max */
+@media (width: 430px) {
+
+}
   </style>
 </head>
 <body>
