--- a/html/home.html
+++ b/html/home.html
@@ -49,7 +49,7 @@
 
     <div class="data">
 <p id="daily">Daily Routine</p>
-<p id="weight">Body Weight</p>
+<p id="weight">Workout</p>
 <p id="workout">Workout 0 of <span id="totalWorkouts">0</span></p>
 </div>
 
