--- a/html/Workout1.html
+++ b/html/Workout1.html
@@ -8,7 +8,9 @@
 	</head>
 	<body class="Background">
 		<div class="Container">
-			<img src="../assets/Arrow.png" alt="Arrow" />
+			<a href="./workout.html">
+				<img src="../assets/Arrow.png" alt="Arrow"
+			/></a>
 			<div class="Font">Day 1</div>
 		</div>
 		<div class="Container1">
