--- a/html/workout.html
+++ b/html/workout.html
@@ -8,7 +8,7 @@
 	</head>
 	<body class="background">
 		<div class="Container">
-			<img src="../assets/Arrow.png" alt="Arrow" />
+			<a href="./home.html"> <img src="../assets/Arrow.png" alt="Arrow" /></a>
 			<div class="Font">WorkOuts</div>
 		</div>
 		<div class="Today">Today</div>
