done ui for workout

--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -69,6 +69,10 @@
       margin-top: 3px;
     }
 
+    .edit-pin:hover {
+      color: #F15225;
+    }
+
     .btn-containers {
       display: flex;
       place-items: center;
@@ -360,6 +364,9 @@
     .dropdown-header {
       padding-left: 33px;
     }
+}
+@media screen and (min-width: 1200px) {
+  
 }
 
     .logout-btn {
