--- a/html/Workout1.html
+++ b/html/Workout1.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="../css/Workout1.css" />
 	</head>
 	<body class="Background">
-		<div class="Container">
-			<img src="../assets/Arrow.png" alt="Arrow" />
+		<div class="Container"> 
+			<a href="./workout.html"><img src="../assets/Arrow.png" alt="Arrow" /></a>
 			<div class="Font">Day 1</div>
 		</div>
 		<div class="Container1">
@@ -24,7 +24,9 @@
 				src="../assets/Knee plank exercise_ Flat vector illustration… 1.png"
 				class="img"
 			/>
-			<div class="Exercise1">Knee plank 00.30</div>
+			<div class="Exercise1">
+				<a href="./Workout2.html" class="Button">Knee plank 00.30</a>
+			</div>
 		</div>
 	</body>
 </html>
