video added to the workout page tut

--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -484,18 +484,20 @@ input:checked + .slider:before {
    <div class="dropdown-box">
   <div class="dropdown-header" onclick="toggleDropdown(this)">
     <div class="dropdown-title">
-      <img src="https://cdn-icons-png.flaticon.com/128/4991/4991422.png" class="pfp-image"/>
-      <p class="para-title">Notification</p>
+      <img src="https://cdn-icons-png.flaticon.com/128/10629/10629003.png" class="pfp-image"/>
+      <p class="para-title">Audio</p>
     </div>
     <img class="arrow-icon" src="/assets/Arrow-dropdown.png" alt="Dropdown Arrow" style="margin-left: 207px;" />
   </div>
 
   <div class="dropdown-content">
     <div class="dropdown-item1">
-      <p class="setting" style="margin-left: 0; margin-top: 5px; font-size: 13px;">Notification Settings</p>
+      <p class="setting" style="margin-left: 0; margin-top: 5px; font-size: 13px;">Audio Settings</p>
 
-      <div class="btn-containers">
-        <p class="setting">Turn Off Sound</p>
+      <div class="btn-containers" style="
+    margin-top: 45px;
+">
+        <p class="setting" style="margin-top: 0px;">Turn Off Sound</p>
         <label class="switch">
           <input type="checkbox" id="soundToggle">
           <span class="slider round"></span>
