--- a/html/Workout2.html
+++ b/html/Workout2.html
@@ -19,10 +19,17 @@
             <div class="text3">Perform thhe traditional plank position but with your knees on the ground and your feet crossed in the air</div>
             <div class="text4">Keep your spine straight, Hold this Posetion</div>
         </div>
-        <div class="bottom">
-				<a href="https://youtu.be/Of0YDiN9p00?si=8sKn3ENW0xu_lfNW" class="Button">How-to-do</a>
-			</div>
-</body>
-    
+        <div>
+		
+
+        <div class="text">HOW TO DO IT?</div>
+            <p class="text" style="font-size: 13px; font-weight: 600;">HERES A VIDEO FOR VISUAL INTRUSTIONS!</p>
+            <iframe width="315" height="150" style="margin-left: 20px;"
+            src="https://www.youtube.com/embed/Of0YDiN9p00" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allowfullscreen>
+            </iframe>
+
 </body>
 </html>
