--- a/html/Workout2.html
+++ b/html/Workout2.html
@@ -16,8 +16,8 @@
 		<img src="..//assets/Knee plank exercise_ Flat vector illustration… 1.png" alt="image" class="Posetion" />
 		<div class="text">INSTRUCTION</div>	
         <div class="text2">
-            <div class="text3">Perform thhe traditional plank position but with your knees on the ground and your feet crossed in the air</div>
-            <div class="text4">Keep your spine straight, Hold this Posetion</div>
+            <div class="text3">Perform the traditional plank position but with your knees on the ground and your feet crossed in the air</div>
+            <div class="text4">Keep your spine straight, Hold this position</div>
         </div>
         <div>
 		
