new title for our app

--- a/html/workout.html
+++ b/html/workout.html
@@ -5,14 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-		<title>FITNESS PALS</title>
+		<title>FITNESS PAL</title>
 		<link rel="stylesheet" href="../css/Workout.css" />
 	</head>
+	  <section class="header">
+    <div class="container">
+      <a href="/html/home.html">
+        <img class="header-image" src="/assets/arrow.png" alt="Back">
+      </a>
+      <p class="setting">Discovery</p>
+    </div>
+  </section>
+
 	<body class="background">
-		<div class="Container">
-			<a href="./home.html">	<img src="../assets/Arrow.png" alt="Arrow" /></a>
-			<div class="Font">WorkOuts</div>
-		</div>
+		
 		<div class="Today">Today</div>
 		<div class="workout-container">
 			<div class="Top">
