--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- 
-  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-  <title>FitnessPals</title>
+    <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
+  <title>FitnessPal</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap');
     * {
