--- a/html/Workout1.html
+++ b/html/Workout1.html
@@ -3,9 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-		<title>FITNESS PALS</title>
+		  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
+  <title>FitnessPal</title>
 		<link rel="stylesheet" href="../css/Workout1.css" />
 	</head>
 	<body class="Background">
