--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-    <title>FitnessPals</title>
+  <title>FitnessPal</title>
   <style>
     * {
       box-sizing: border-box;
