--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-  <title>FitnessPals</title>
+  <title>FitnessPal</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
   <style>
@@ -69,7 +69,7 @@
 
   <div class="info-container">
     <div class="header-container">
-    <h1 class="intro-header">Fitness Pals</h1>
+    <h1 class="intro-header">FitnessPal</h1>
     <p class="word-container">
       FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
     </p>  
