--- a/html/home.html
+++ b/html/home.html
@@ -127,15 +127,93 @@
 </div>
 
 <script src="../js/newPlan.js"></script>
+<!-- Load Font Awesome CDN for icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
+
+<footer class="bottom-nav">
+  <a href="TEST-DROPDOWN.html" aria-label="Menu">
+    <i class="fas fa-bars"></i>
+    <span class="nav-label">Settings</span>
+  </a>
+  <a href="home.html" aria-label="Home" class="active">
+    <i class="fas fa-home"></i>
+    <span class="nav-label">Home</span>
+  </a>
+  <a href="workout.html" aria-label="Workout">
+    <i class="fas fa-dumbbell"></i>
+    <span class="nav-label">Workout</span>
+  </a>
+</footer>
+
+<style>
+  .bottom-nav a {
+    color: #555;
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    padding: 10px 0;
+    transition: color 0.3s ease;
+  }
+
+  .bottom-nav a:hover,
+  .bottom-nav a:focus {
+    color: #F15223;
+    outline: none;
+  }
+
+  .bottom-nav a.active {
+    color: #F15223;
+  }
+
+  .bottom-nav i {
+    font-size: 24px;
+    margin-bottom: 5px;
+  }
+
+  .nav-label {
+    font-weight: 600;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    border-top: 1px solid #ddd;
+    box-shadow: 0 -3px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    height: 60px;
+  }
+
+
+  @media (max-width: 480px) {
+    .nav-label {
+      display: none;
+    }
+    .bottom-nav {
+      height: 50px;
+    }
+    .bottom-nav i {
+      font-size: 22px;
+    }
+  }
+</style>
 
 </body>
 
 
-<footer class="bottom">
- <a href="TEST-DROPDOWN.html"><img style="height: 35px; margin-top: 35px;margin-right: 30px;"src="https://cdn-icons-png.flaticon.com/128/3019/3019014.png" alt=""></a>
-<a href="home.html"><img  style="height: 35px;  margin-top: 35px;"src="https://cdn-icons-png.flaticon.com/128/1946/1946436.png" alt=""></a>
-<a href="workout.html"><img style="height: 35px;  margin-top: 35px;margin-left: 30px;"src="https://cdn-icons-png.flaticon.com/128/3004/3004451.png" alt=""></a>
-</footer>
+
 
 
 </html>
