--- a/html/workout.html
+++ b/html/workout.html
@@ -3,14 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-		<<<<<<< HEAD
-		<link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
-		<title>FITNESS PALS</title>
-		=======
-		<link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
-		<title>FITNESS PAL</title>
-		>>>>>>> 58146869f0140c669c80e68a599d9050bbb2298e
+		  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
+ 		 <title>FitnessPal</title>
 		<link rel="stylesheet" href="../css/Workout.css" />
 	</head>
 	<section class="header">
@@ -23,12 +17,11 @@
 	</section>
 
 	<body class="background">
-		<<<<<<< HEAD
 		<div class="Container">
 			<img src="../assets/Arrow.png" alt="Arrow" />
 			<div class="Font">WorkOuts</div>
 		</div>
-		======= >>>>>>> 58146869f0140c669c80e68a599d9050bbb2298e
+
 		<div class="Today">Today</div>
 		<div class="workout-container">
 			<div class="Top">
