--- a/html/sign-up-page.html
+++ b/html/sign-up-page.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon">
-  <title>FitnessPal</title>
-    <title>FitnessPals</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FitnessPal - Sign Up</title>
+  <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
   <style>
+    /* Your existing styles here */
     * {
       box-sizing: border-box;
     }
-
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #F15223;
@@ -20,7 +19,6 @@
       height: 100vh;
       margin: 0;
     }
-
     .signup-container {
       background: white;
       padding: 40px;
@@ -28,25 +26,22 @@
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       width: 100%;
       max-width: 400px;
-    }
-
-    .signup-container h2 {
       text-align: center;
+    }
+    h2 {
       margin-bottom: 30px;
       color: #333;
     }
-
     .form-group {
       margin-bottom: 20px;
+      text-align: left;
     }
-
     label {
       display: block;
       margin-bottom: 6px;
       color: #555;
       font-weight: 500;
     }
-
     input[type="text"],
     input[type="password"],
     input[type="email"] {
@@ -56,63 +51,74 @@
       border: 1px solid #ccc;
       border-radius: 8px;
     }
-
     input:focus {
       outline: none;
       border-color: #007bff;
       box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.15);
     }
-
     .show-password {
       display: flex;
       align-items: center;
       margin-top: -10px;
       margin-bottom: 15px;
       font-size: 14px;
+      text-align: left;
     }
-
     .show-password input {
       margin-right: 8px;
     }
-
-    .signup-btn {
+    .signup-btn, #google-signin-btn {
       width: 100%;
       padding: 12px;
       font-size: 16px;
-      background: #F15223;
-      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      font-weight: 700;
       transition: background 0.3s ease;
+      margin-top: 10px;
     }
-
+    .signup-btn {
+      background: #F15223;
+      color: white;
+    }
     .signup-btn:hover {
       background-color: #e94d1e;
     }
-
+    #google-signin-btn {
+      background: #4285F4;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
+    #google-signin-btn:hover {
+      background: #357ae8;
+    }
     .footer-text {
       margin-top: 15px;
-      text-align: center;
       font-size: 14px;
       color: #666;
     }
-
     .footer-text a {
       color: #F15223;
       text-decoration: none;
     }
-
     .footer-text a:hover {
       text-decoration: underline;
     }
   </style>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 </head>
 <body>
 
   <div class="signup-container">
     <h2>Create Your Account</h2>
-    <form onsubmit="handleSignUp(event)">
+    <form id="signup-form">
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" required />
@@ -127,33 +133,78 @@
       </div>
 
       <div class="show-password">
-        <input type="checkbox" id="showPass" onclick="togglePassword()" />
+        <input type="checkbox" id="showPass" />
         <label for="showPass">Show Password</label>
       </div>
 
       <button type="submit" class="signup-btn">Sign Up</button>
-
-      <p class="footer-text">
-        Already have an account? <a href="log-in-page.html">Log in</a>
-      </p>
     </form>
+
+    <button id="google-signin-btn" aria-label="Sign in with Google">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" alt="Google Logo" style="height:18px;"/>
+      Sign in with Google
+    </button>
+
+    <p class="footer-text">
+      Already have an account? <a href="log-in-page.html">Log in</a>
+    </p>
   </div>
 
   <script>
-    function togglePassword() {
-      const password = document.getElementById("password");
-      password.type = password.type === "password" ? "text" : "password";
-    }
+    // Firebase configuration - Replace with your own config from Firebase Console
+  const firebaseConfig = {
+  apiKey: "AIzaSyAKsNqr-UAkwGh2H6uD_ZXfwjwCsinB6bg",
+  authDomain: "fitnesspal-3c566.firebaseapp.com",
+  projectId: "fitnesspal-3c566",
+  storageBucket: "fitnesspal-3c566.firebasestorage.app",
+  messagingSenderId: "860568935458",
+  appId: "1:860568935458:web:1f695b4693270d5869be7b",
+  measurementId: "G-DE14S51W80"
+};
 
-    function handleSignUp(e) {
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Toggle password visibility
+    document.getElementById('showPass').addEventListener('change', function () {
+      const passField = document.getElementById('password');
+      passField.type = this.checked ? 'text' : 'password';
+    });
+
+    // Email/password sign up
+    document.getElementById('signup-form').addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const username = document.getElementById("username").value;
-      const email = document.getElementById("email").value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value;
 
-      alert("Account created for: " + username + "\nEmail: " + email);
-    }
+      try {
+        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+        // Update profile with username
+        await userCredential.user.updateProfile({ displayName: username });
+
+        alert(`Account created! Welcome, ${username}`);
+        // Redirect or update UI accordingly here
+      } catch (error) {
+        alert(`Error: ${error.message}`);
+      }
+    });
+
+    // Google Sign-In
+    document.getElementById('google-signin-btn').addEventListener('click', async () => {
+      const provider = new firebase.auth.GoogleAuthProvider();
+      try {
+        const result = await auth.signInWithPopup(provider);
+        const user = result.user;
+        alert(`Logged in as ${user.displayName} (${user.email})`);
+        // Redirect or update UI accordingly here
+      } catch (error) {
+        alert(`Google sign-in failed: ${error.message}`);
+      }
+    });
   </script>
-
 </body>
 </html>
