--- a/html/Exircise.html
+++ b/html/Exircise.html
@@ -3,14 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<<<<<<< HEAD
 
 		<link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
 		<title>FITNESS PALS</title>
-		=======
 		<link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
 		<title>FitnessPal</title>
-		>>>>>>> 58146869f0140c669c80e68a599d9050bbb2298e
 		<link rel="stylesheet" href="../css/Workout1.css" />
 	</head>
 	<body class="Background">
@@ -30,7 +27,7 @@
 				class="img"
 			/>
 			<div class="Exercise1">
-				<a href="./Workout2.html" class="Button">Knee plank 00.30</a>
+				<a href="./video.html" class="Button">Knee plank 00.30</a>
 			</div>
 		</div>
 	</body>
