--- a/html/home.html
+++ b/html/home.html
@@ -89,24 +89,25 @@
 
 
 <div class="recentPlan">
-    <p id="Recent">Recent Plan</p>
+  <p id="Recent">Recent Plan</p>
 
-    <div class="dayy">
-    <img id="firsts" src="../assets/Item.png">
-    <img id="second" src="../assets/Item.png">
-    <img id="third" src="../assets/Item.png">
-    <img id="forth" src="../assets/Item.png">
-</div>
+  <div class="dayy">
+    <img class="recent-img" src="../assets/Item.png" alt="Plan 1">
+    <img class="recent-img" src="../assets/Item.png" alt="Plan 2">
+    <img class="recent-img" src="../assets/Item.png" alt="Plan 3">
+    <img class="recent-img" src="../assets/Item.png" alt="Plan 4">
+  </div>
 
-<div class="time">
-    <p id="da1">July 4</p>
-    <p id="da2">July 4</p>
-    <p id="da3">July 4</p>
-    <p id="da4">July 4</p>
-</div>
-<div class="wasd" id="viewall">
+  <div class="time">
+    <p class="recent-date">---</p>
+    <p class="recent-date">---</p>
+    <p class="recent-date">---</p>
+    <p class="recent-date">---</p>
+  </div>
+
+  <div class="wasd" id="viewall">
     <button id="All">See All</button>
-</div>
+  </div>
 </div>
 
 <script src="../js/log-in.js"></script>
@@ -128,6 +129,8 @@
 
 <script src="../js/newPlan.js"></script>
 <!-- Load Font Awesome CDN for icons -->
+
+<script src="../js/recent-plan.js"></script>
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
