--- a/html/sign-up-page.html
+++ b/html/sign-up-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FitnessPal - Sign Up</title>
+  <title>FitnessPal</title>
   <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
   <style>
     * {
