Firebased has been finally completed with a working system

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -7,74 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
     @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-* {
+    
+    * {
     margin: 0%;
-}
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-   background-color: #F15223;
-  text-align: center;
-}
+    }
 
-.info-container {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  align-items: center;
-  max-width: 600px;
-  padding: 24px;
-}
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      background-color: #F15223;
+      text-align: center;
+    }
 
-.intro-header {
-  font-size: 48px;
-  color: white;
-  font-weight: bold;
-  font-family: "DM Sans", sans-serif;
-  margin: 0;
-}
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      align-items: center;
+      max-width: 600px;
+      padding: 24px;
+    }
 
-.word-container {
-  font-weight: 500;
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-  padding-left: 40px;
-  padding-right: 40px;
-  color: white;
-  margin: 0;
-}
+    .intro-header {
+      font-size: 48px;
+      color: white;
+      font-weight: bold;
+      font-family: "DM Sans", sans-serif;
+      margin: 0;
+    }
 
-button {
-  padding: 20px 110px;
-  font-size: 17px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  border: none;
-  border-radius: 16px;
-  background-color: white;
-  color: #000000;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
+    .word-container {
+      font-weight: 500;
+      font-size: 16px;
+      font-family: "Poppins", sans-serif;
+      padding-left: 40px;
+      padding-right: 40px;
+      color: white;
+      margin: 0;
+    }
 
-button:hover {
-  background-color: #f5f5f5;
-}
+    button {
+      padding: 20px 110px;
+      font-size: 17px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 600;
+      border: none;
+      border-radius: 16px;
+      background-color: white;
+      color: #000000;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #f5f5f5;
+    }
    </style>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
-    <title>FitnessPals</title>
 </head>
 <body>
     <div class="info-container">
         <div class="headers">
-            <h1 class="intro-header">Welcome!</h1>
-        <p class="word-container">Sign in or create a account to continue access.</p>
+        <h1 class="intro-header">Welcome!</h1>
+        <p class="word-container">Sign in or create an account to continue access.</p>
         </div>
         <a href="/html/log-in-page.html"><button style="padding-left: 118px; padding-right: 118px;">Log in</button></a>
         <a href="/html/sign-up-page.html"><button>Sign up</button></a>
