--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -47,7 +47,7 @@
       font-weight: 500;
     }
 
-    input[type="text"],
+    input[type="email"],
     input[type="password"] {
       width: 100%;
       padding: 12px;
@@ -86,6 +86,7 @@
       cursor: pointer;
       transition: background 0.3s ease;
       margin-bottom: 20px;
+      font-weight: 700;
     }
 
     .login-btn:hover {
@@ -115,6 +116,10 @@
     }
   </style>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
   <!-- Google Identity Services -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
@@ -122,25 +127,25 @@
 
   <div class="login-container">
     <h2>Login to Your Account</h2>
-    <form onsubmit="handleLogin(event)">
+    <form id="login-form">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" required />
+        <label for="email">Email</label>
+        <input type="email" id="email" autocomplete="email" required />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" required />
+        <input type="password" id="password" autocomplete="current-password" required />
       </div>
 
       <div class="show-password">
-        <input type="checkbox" id="showPass" onclick="togglePassword()" />
+        <input type="checkbox" id="showPass" />
         <label for="showPass">Show Password</label>
       </div>
 
       <button type="submit" class="login-btn">Log In</button>
     </form>
 
-    <!-- Google Sign-In button will be rendered here -->
+    <!-- Google Sign-In button -->
     <div id="google-signin"></div>
 
     <p class="footer-text">
@@ -149,38 +154,64 @@
   </div>
 
   <script>
-    function handleLogin(event) {
-      event.preventDefault();
-      const username = document.getElementById("username").value;
+    // Your Firebase config (replace with your own if needed)
+    const firebaseConfig = {
+      apiKey: "AIzaSyAKsNqr-UAkwGh2H6uD_ZXfwjwCsinB6bg",
+      authDomain: "fitnesspal-3c566.firebaseapp.com",
+      projectId: "fitnesspal-3c566",
+      storageBucket: "fitnesspal-3c566.appspot.com",
+      messagingSenderId: "860568935458",
+      appId: "1:860568935458:web:1f695b4693270d5869be7b",
+      measurementId: "G-DE14S51W80"
+    };
 
-      if (username) {
-        localStorage.setItem("loggedInUser", username);
-        window.location.href = "home.html"; 
-      } else {
-        alert("Please enter a username.");
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Toggle password visibility
+    document.getElementById('showPass').addEventListener('change', function () {
+      const passField = document.getElementById('password');
+      passField.type = this.checked ? 'text' : 'password';
+    });
+
+    // Email/password login handler
+    document.getElementById('login-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+
+      try {
+        const userCredential = await auth.signInWithEmailAndPassword(email, password);
+        alert(`Welcome back, ${userCredential.user.displayName || email}!`);
+        window.location.href = "/html/dashboard.html"; // Change to your dashboard/home page
+      } catch (error) {
+        alert(`Login failed: ${error.message}`);
       }
-    }
+    });
 
-    function togglePassword() {
-      const passwordInput = document.getElementById("password");
-      passwordInput.type = passwordInput.type === "password" ? "text" : "password";
-    }
-
+    // Google Sign-In callback for Google Identity Services
     function handleCredentialResponse(response) {
       const id_token = response.credential;
-      const userObject = JSON.parse(atob(id_token.split('.')[1]));
+      const credential = firebase.auth.GoogleAuthProvider.credential(id_token);
 
-      // Use Google 'name' if available; otherwise, use the email prefix
-      const username = userObject.name || (userObject.email ? userObject.email.split('@')[0] : "GoogleUser");
-
-      localStorage.setItem("loggedInUser", username);
-      window.location.href = "home.html";
+      auth.signInWithCredential(credential)
+        .then((userCredential) => {
+          const user = userCredential.user;
+          alert(`Welcome back, ${user.displayName || user.email}!`);
+          window.location.href = "/html/dashboard.html"; // Change as needed
+        })
+        .catch(error => {
+          alert(`Google sign-in failed: ${error.message}`);
+        });
     }
 
     window.onload = function () {
       google.accounts.id.initialize({
         client_id: '899373532299-dno9k1v6u83mn2ngmkh0dsgoc64g7vpg.apps.googleusercontent.com',
-        callback: handleCredentialResponse
+        callback: handleCredentialResponse,
+        ux_mode: 'popup' // Optional popup instead of redirect
       });
 
       google.accounts.id.renderButton(
@@ -188,7 +219,8 @@
         { theme: "outline", size: "large" }
       );
 
-      // Optional: google.accounts.id.prompt();
+      // Optional: automatically prompt One-Tap sign-in
+      // google.accounts.id.prompt();
     };
   </script>
 
