--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     }
 
     body {
-      margin: 0;
       height: 100vh;
       display: flex;
       flex-wrap: wrap;
@@ -23,6 +22,7 @@
       background-color: #F15223;
       text-align: center;
       font-family: "DM Sans", sans-serif;
+      overflow: hidden;
     }
 
     .info-container {
@@ -32,12 +32,25 @@
       align-items: center;
       max-width: 600px;
       padding: 24px;
+      animation: fadeIn;
     }
+
+       @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
 
     .intro-header {
       font-size: 48px;
       color: white;
-      font-weight: bold;
+      font-weight: 700;
     }
 
     .word-container {
@@ -45,8 +58,13 @@
       font-family: "Poppins", sans-serif;
       padding: 0 40px;
       color: white;
+      line-height: 1.6;
+      max-width: 480px;
     }
 
+    a {
+      text-decoration: none;
+    }
     button {
       padding: 20px 110px;
       font-size: 17px;
@@ -62,7 +80,10 @@
 
     button:hover {
       background-color: #f5f5f5;
+       transform: translateY(-2px);
     }
+
+   
   </style>
 </head>
 <body>
@@ -71,7 +92,7 @@
     <div class="header-container">
     <h1 class="intro-header">FitnessPal</h1>
     <p class="word-container">
-      FIND OUT EXACTLY WHAT TRAINING WILL WORK OUT SPECIFICALLY FOR YOU
+      Discover the training that works best for your body and goals.
     </p>  
     </div>
     <a href="/html/welcome.html">
