mini error where users couldnt make an account using their email. This problem has been fixed

--- a/html/sign-up-page.html
+++ b/html/sign-up-page.html
@@ -154,7 +154,7 @@
       appId: "1:860568935458:web:1f695b4693270d5869be7b",
       measurementId: "G-DE14S51W80"
     };
-
+//TESTING THIS//
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
