--- a/html/log-in-page.html
+++ b/html/log-in-page.html
@@ -141,8 +141,7 @@
         <input type="checkbox" id="showPass" />
         <label for="showPass">Show Password</label>
       </div>
-
-      <button type="submit" class="login-btn">Log In</button>
+      <a href="/html/home.html"><button type="submit" class="login-btn">Log In</button></a>
     </form>
 
     <!-- Google Sign-In button -->
